# Expense-Tracker-MCP-Server

./: .env.example  Procfile  README.md  main.py  pyproject.toml  requirements.txt
Database/: database.py  init_db.py  schema.sql
Prompts/: transaction_guide.py  transaction_rules.py  validate.py
Resources/: categories.json  frequency.json  payments.json  status.json
Tools/AuthenticationTools/: auth_tools.py
Tools/TransactionTools/: changes.py  reports.py
Utilities/: auth.py  email_services.py  middleware.py  utilities.py
