[project]
name = "expensetrackermcp"
version = "0.1.0"
description = "Expense Tracker MCP Server with async PostgreSQL support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.13.3",
    "asyncpg>=0.31.0",
    "bcrypt>=4.0.0",
    "pyjwt>=2.8.0",
    "python-dotenv>=1.0.0",
]
